# owl

./: CONTRIBUTING.md  LICENSE  README.md
athena-platform/: Cargo.toml  README.md
athena-platform/docs/: component-model-guide.md  cross-agent-communication.md  wasi-nn-integration.md
athena-platform/shared/communication/: Cargo.toml
athena-platform/shared/communication/src/: lib.rs
athena-platform/shared/security/: Cargo.toml
athena-platform/shared/security/src/: lib.rs
athena-platform/shared/wasi-nn-engine/: Cargo.toml
athena-platform/shared/wasi-nn-engine/src/: lib.rs
athena-platform/shared/wasm-runtime/: Cargo.toml
athena-platform/shared/wasm-runtime/src/: lib.rs
athena-platform/shared/webllm-engine/: Cargo.toml
athena-platform/shared/webllm-engine/src/: lib.rs
athena-platform/templates/agent-template/: Cargo.toml  spin.toml
athena-platform/templates/agent-template/src/: lib.rs
athena-platform/templates/agent-template/src/analyzers/: mod.rs
athena-platform/templates/agent-template/src/communicators/: mod.rs
athena-platform/templates/agent-template/src/models/: mod.rs
athena-platform/templates/agent-template/src/processors/: mod.rs
athena-platform/templates/agent-template/src/wasi_nn/: mod.rs
athena-platform/templates/agent-template/src/webllm/: mod.rs
athena-platform/tools/: create-agent.sh
docs/architecture/master/: agent_repositories_architecture-2.md
docs/architecture/owl/: owl_agent_architecture.md  owl_implementation_plan.md
