[package]
name = "athena-communication"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
prost = "0.12"
tonic = "0.10"

[build-dependencies]
tonic-build = "0.10"

[lib]
crate-type = ["cdylib", "rlib"]