[package]
name = "athena-webllm-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-stream = "0.1"
candle-core = { version = "0.3", features = ["cuda"] }
candle-transformers = "0.3"
tokenizers = "0.15"
tera = "1.19"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["webgpu"]
webgpu = []
cpu = []