[package]
name = "athena-{{agent_name}}"
version = "0.1.0"
edition = "2021"
authors = ["Athena Platform Team"]
license = "MIT"

[dependencies]
spin-sdk = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"

# Athena platform dependencies
athena-wasm-runtime = { path = "../../../shared/wasm-runtime" }
athena-wasi-nn-engine = { path = "../../../shared/wasi-nn-engine" }
athena-webllm-engine = { path = "../../../shared/webllm-engine" }
athena-communication = { path = "../../../shared/communication" }
athena-security = { path = "../../../shared/security" }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "athena-{{agent_name}}"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true